--- a/e-commerce/frontend/package.json
+++ b/e-commerce/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "c-commerce-website",
+  "name": "nagiza-e-commerce-website",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "axios": "^1.13.5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "react-lazy-load-image-component": "^1.6.3",
     "react-router-dom": "^7.13.0",
     "tailwindcss": "^4.1.18"
   },
